Se hicieron las funcionalidades para la barra de búsqueda, permite buscar por personaje, nave espacial o película.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>Ejemplo de interacción con API de Star Wars</h1>
     <div class="search-container">
         <i class="fa-solid fa-magnifying-glass search_icon"></i>
-        <input type="text" placeholder="Búsqueda por personaje, nave espacial o película" class="search_input">
+        <input type="text" id="search-bar" placeholder="Búsqueda por personaje, nave espacial o película" class="search_input">
     </div>
     <div class="container-button">
         <button id="characters-Button" class="btn btn-secondary"  >VER PERSONAJES</button>
