Se hizo el responsive, y se completó el estilo CSS para todos los elementos.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://kit.fontawesome.com/ec6d284f8e.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <h1>Ejemplo de interacción con API de Star Wars</h1>
+    <h1>Ejemplo con API de Star Wars</h1>
     <div class="search-container">
         <i class="fa-solid fa-magnifying-glass search_icon"></i>
         <input type="text" id="search-bar" placeholder="Búsqueda por personaje, nave espacial o película" class="search_input">
