--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <input type="text" id="search-bar" placeholder="Búsqueda por personaje, nave espacial o película" class="search_input">
     </div>
     <div class="container-button">
-        <button id="characters-button" class="btn btn-secondary"  >VER TODOS LOS PERSONAJES</button>
-        <button id="starships-button"  class="btn btn-secondary">VER TODAS LAS NAVES ESPACIALES</button>
-        <button id="films-button" class="btn btn-secondary">VER TODAS LAS PELÍCULAS</button>
+        <button id="characters-button" class="btn"  >VER TODOS LOS PERSONAJES</button>
+        <button id="starships-button"  class="btn">VER TODAS LAS NAVES ESPACIALES</button>
+        <button id="films-button" class="btn">VER TODAS LAS PELÍCULAS</button>
     </div>
     <div class="container">
         <div class="row" id="container-card">
